@@ -1,3 +1,11 @@
+2011-01-17  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_proc.cc (proc_tab_cmp): Fix typo in comment.
+	(fhandler_proc::fill_filebuf): Handle return value of 0 from format
+	function as error.
+	(format_proc_stat): Set errno when returning 0 size.
+	(format_proc_partitions): Rewrite method to fetch partition info.
+
 2011-01-13  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Always set
